--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="24dp"
-    android:text="登入"
+    android:text="@string/Login_Btn"
     app:layout_constraintEnd_toEndOf="@+id/et_login_password"
     app:layout_constraintStart_toStartOf="@+id/et_login_password"
     app:layout_constraintTop_toBottomOf="@+id/et_login_password" />
@@ -22,10 +22,10 @@
     android:id="@+id/tv_title"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="24dp"
     android:layout_marginTop="120dp"
+    android:layout_marginStart="24dp"
     android:layout_marginEnd="24dp"
-    android:text="歡迎"
+    android:text="@string/Login_Title"
     android:textSize="34sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="24dp"
     android:ems="10"
-    android:hint="Account"
+    android:hint="@string/Login_Email"
     android:inputType="text"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
     android:layout_marginStart="74dp"
     android:layout_marginTop="24dp"
     android:layout_marginEnd="72dp"
-    android:text="尚未註冊?"
+    android:text="@string/Login_unregister"
     app:layout_constraintEnd_toEndOf="@+id/btn_login"
     app:layout_constraintStart_toStartOf="@+id/btn_login"
     app:layout_constraintTop_toBottomOf="@+id/btn_login" />
@@ -61,7 +61,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="24dp"
     android:ems="10"
-    android:hint="Password"
+    android:hint="@string/Login_Password"
     android:inputType="textPassword"
     app:layout_constraintEnd_toEndOf="@+id/et_login_email"
     app:layout_constraintStart_toStartOf="@+id/et_login_email"
