--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="24dp"
     android:ems="10"
-    android:hint="Password"
+    android:hint="@string/Register_Password"
     android:inputType="text"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="32dp"
-    android:text="註冊"
+    android:text="@string/Register_btn"
     app:layout_constraintEnd_toEndOf="@+id/et_register_email"
     app:layout_constraintHorizontal_bias="0.498"
     app:layout_constraintStart_toStartOf="@+id/et_register_email"
@@ -38,7 +38,7 @@
     android:layout_marginStart="24dp"
     android:layout_marginTop="120dp"
     android:layout_marginEnd="24dp"
-    android:text="註冊"
+    android:text="@string/Register_Title"
     android:textSize="34sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="24dp"
     android:ems="10"
-    android:hint="Account"
+    android:hint="@string/Register_Account"
     android:inputType="text"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="24dp"
     android:ems="10"
-    android:hint="Email"
+    android:hint="@string/Register_Email"
     android:inputType="text"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.497"
@@ -76,7 +76,7 @@
     android:layout_marginStart="74dp"
     android:layout_marginTop="24dp"
     android:layout_marginEnd="72dp"
-    android:text="已有帳號?"
+    android:text="@string/Register_HaveAccount"
     app:layout_constraintEnd_toEndOf="@+id/btn_register"
     app:layout_constraintStart_toStartOf="@+id/btn_register"
     app:layout_constraintTop_toBottomOf="@+id/btn_register" />
