--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,15 @@
   tools:context=".LoginActivity">
 
   <Button
+    android:id="@+id/btn_translate"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
+    android:layout_marginEnd="16dp"
+    android:text="@string/Login_translate"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" />
+  <Button
     android:id="@+id/btn_login"
     style="@style/Widget.Material3.Button"
     android:layout_width="0dp"
